<<<<<<< HEAD
[gd_scene load_steps=48 format=3 uid="uid://dgy78siw1rcl"]
=======
[gd_scene load_steps=35 format=3 uid="uid://dgy78siw1rcl"]
>>>>>>> 0563eea9be836d9b5a105c85775b4527a6e4c9d9

[ext_resource type="Script" uid="uid://bh24s60ojy0p5" path="res://node_2d.gd" id="1_3mrqo"]
[ext_resource type="Texture2D" uid="uid://ceaq4odu0i6ld" path="res://images for background/first room.png" id="2_joorw"]
[ext_resource type="Texture2D" uid="uid://c4sigcula16wo" path="res://items/left-arrow1.png" id="3_2vekm"]
[ext_resource type="Texture2D" uid="uid://b6ccmfxjwqm1c" path="res://items/right-arrow1.png" id="4_yx171"]
[ext_resource type="Texture2D" uid="uid://ovnu208su0gv" path="res://images for background/second room.png" id="5_yhmtn"]
[ext_resource type="Texture2D" uid="uid://ccxiyqbh1d661" path="res://items/Number for box 1 .png" id="5_yyih5"]
[ext_resource type="Script" uid="uid://cc8d6cfy4pyd0" path="res://key_sprite.gd" id="6_0mevm"]
[ext_resource type="Script" uid="uid://dthpnhto80pdr" path="res://third_room.gd" id="6_2vekm"]
[ext_resource type="Texture2D" uid="uid://drs8e302yexrc" path="res://images for background/third room.png" id="6_gwjdr"]
[ext_resource type="Script" uid="uid://g6f6ow4cxnse" path="res://second_room.gd" id="6_wuoie"]
[ext_resource type="Texture2D" uid="uid://bsfnv453vfjpj" path="res://items/Number for box 2.png" id="7_0yprl"]
[ext_resource type="Texture2D" uid="uid://3n7583oa112d" path="res://images for background/fourth room.png" id="7_lvtmh"]
[ext_resource type="Texture2D" uid="uid://0mlb2h4u2tok" path="res://items/key_1.png" id="7_w2501"]
[ext_resource type="PackedScene" uid="uid://boalbjqusu3om" path="res://minigames/15puzzle/Board.tscn" id="8_yx171"]
[ext_resource type="Script" uid="uid://dngcar8h6nwjk" path="res://fourth_room.gd" id="9_yhmtn"]
[ext_resource type="Texture2D" uid="uid://cjultft6ww4ap" path="res://images for background/screen in 4 room.png" id="10_yx171"]
[ext_resource type="FontFile" uid="uid://doktru6xsqb4n" path="res://Iceberg-Regular.ttf" id="11_gwjdr"]
[ext_resource type="Script" uid="uid://740g2th2081a" path="res://battery_sprite.gd" id="11_jsoai"]
[ext_resource type="Script" uid="uid://bcggij3p5jkj6" path="res://main_message.gd" id="11_lvtmh"]
[ext_resource type="Texture2D" uid="uid://cwfg5j6tgficl" path="res://items/Number for box 4.png" id="11_wuoie"]
[ext_resource type="Texture2D" uid="uid://ci7k3j81ftvmy" path="res://items/battery.png" id="12_bisgb"]
[ext_resource type="Script" uid="uid://ct8xakff425wy" path="res://screwdriver_sprite.gd" id="13_y5ctq"]
[ext_resource type="Texture2D" uid="uid://bypjiikuqh2xb" path="res://items/screwdriver.png" id="14_w7ht3"]
[ext_resource type="Texture2D" uid="uid://b5xu1qj6l6u0i" path="res://items/Number for box 3.png" id="17_bvhbk"]
[ext_resource type="Script" uid="uid://6e4sputjkjpf" path="res://robot_message.gd" id="19_cpsxm"]
[ext_resource type="Texture2D" uid="uid://bvr0jlgi5vjnv" path="res://images for background/RobotBackground.jpg" id="20_hmewc"]
<<<<<<< HEAD
[ext_resource type="Texture2D" uid="uid://bbdap345hya1h" path="res://items/result_generated-image (3).png" id="21_hmewc"]
[ext_resource type="Script" uid="uid://ck28ivxmq4wrs" path="res://paint_brush_script.gd" id="27_8ktx7"]
[ext_resource type="Texture2D" uid="uid://bvghn6d0lagwn" path="res://items/paint-brush.png" id="28_hwsgv"]
=======
[ext_resource type="Texture2D" uid="uid://c7k4erai4s77o" path="res://images for background/InventorySlots.png" id="21_hmewc"]
>>>>>>> 0563eea9be836d9b5a105c85775b4527a6e4c9d9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mrqo"]
size = Vector2(288, 136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joorw"]
size = Vector2(1286.63, 631)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vekm"]
size = Vector2(226, 98.5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yx171"]
a = Vector2(-179, 98)
b = Vector2(21, -2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsoai"]
size = Vector2(72.1955, 53.1381)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx171"]
size = Vector2(1288, 519.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhmtn"]
size = Vector2(107, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwjdr"]
size = Vector2(246.5, 103)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvtmh"]
size = Vector2(302, 102)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5ctq"]
size = Vector2(39.1034, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ktx7"]
size = Vector2(54, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yyih5"]
size = Vector2(281, 429)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjyg3"]
size = Vector2(151.5, 153)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elkpi"]
size = Vector2(1277.25, 533.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yprl"]
size = Vector2(117, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuoie"]
size = Vector2(1278, 536.5)

<<<<<<< HEAD
[sub_resource type="RectangleShape2D" id="RectangleShape2D_gebyw"]
size = Vector2(38.5765, 17.9666)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_d21ai"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

=======
>>>>>>> 0563eea9be836d9b5a105c85775b4527a6e4c9d9
[node name="Game" type="Node2D"]
position = Vector2(11, 39)
script = ExtResource("1_3mrqo")

[node name="FirstRoom" type="Node2D" parent="."]
visible = false

[node name="FirstBackground" type="Sprite2D" parent="FirstRoom"]
position = Vector2(630, 323)
texture = ExtResource("2_joorw")

[node name="LeftArrow" type="Button" parent="FirstRoom"]
offset_left = 16.0
offset_top = 336.0
offset_right = 64.0
offset_bottom = 384.0
icon = ExtResource("3_2vekm")

[node name="RightArrow" type="Button" parent="FirstRoom"]
offset_left = 1216.0
offset_top = 336.0
offset_right = 1264.0
offset_bottom = 384.0
icon = ExtResource("4_yx171")

[node name="Walls" type="Node2D" parent="FirstRoom"]

[node name="Wall1" type="StaticBody2D" parent="FirstRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstRoom/Walls/Wall1"]
position = Vector2(607, 523)
shape = SubResource("RectangleShape2D_3mrqo")

[node name="Wall2" type="StaticBody2D" parent="FirstRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstRoom/Walls/Wall2"]
visible = false
position = Vector2(628.313, 275.5)
shape = SubResource("RectangleShape2D_joorw")

[node name="Wall3" type="StaticBody2D" parent="FirstRoom/Walls"]
position = Vector2(-22, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstRoom/Walls/Wall3"]
position = Vector2(1154, 573)
shape = SubResource("RectangleShape2D_2vekm")

[node name="Wall4" type="StaticBody2D" parent="FirstRoom/Walls"]
position = Vector2(169, 529)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstRoom/Walls/Wall4"]
position = Vector2(-2, 3)
shape = SubResource("SegmentShape2D_yx171")

[node name="NumberForBox1" type="Sprite2D" parent="FirstRoom"]
position = Vector2(1108, 240)
scale = Vector2(0.138672, 0.166748)
texture = ExtResource("5_yyih5")

[node name="KeySprite" type="Area2D" parent="FirstRoom"]
z_index = 1
position = Vector2(-71, 54)
script = ExtResource("6_0mevm")

[node name="CollisionKey" type="CollisionShape2D" parent="FirstRoom/KeySprite"]
z_index = 1
position = Vector2(192.415, 534.795)
rotation = -0.760964
shape = SubResource("RectangleShape2D_jsoai")
one_way_collision_margin = 0.0

[node name="Key1" type="Sprite2D" parent="FirstRoom/KeySprite"]
position = Vector2(189, 532)
texture = ExtResource("7_w2501")

[node name="SecondRoom" type="Node2D" parent="."]
visible = false
position = Vector2(1, 2)
script = ExtResource("6_wuoie")

[node name="SecondBackground" type="Sprite2D" parent="SecondRoom"]
position = Vector2(629, 319)
scale = Vector2(1.00156, 0.991667)
texture = ExtResource("5_yhmtn")

[node name="LeftArrow" type="Button" parent="SecondRoom"]
offset_left = 16.0
offset_top = 336.0
offset_right = 64.0
offset_bottom = 384.0
icon = ExtResource("3_2vekm")

[node name="RightArrow" type="Button" parent="SecondRoom"]
offset_left = 1216.0
offset_top = 336.0
offset_right = 1264.0
offset_bottom = 384.0
icon = ExtResource("4_yx171")

[node name="Walls" type="Node2D" parent="SecondRoom"]
visible = false

[node name="Wall1" type="StaticBody2D" parent="SecondRoom/Walls"]
position = Vector2(132, 34)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondRoom/Walls/Wall1"]
position = Vector2(503, 189)
shape = SubResource("RectangleShape2D_yx171")

[node name="Wall2" type="StaticBody2D" parent="SecondRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondRoom/Walls/Wall2"]
position = Vector2(624, 560)
shape = SubResource("RectangleShape2D_yhmtn")

[node name="Wall3" type="StaticBody2D" parent="SecondRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondRoom/Walls/Wall3"]
position = Vector2(113.75, 528.5)
shape = SubResource("RectangleShape2D_gwjdr")

[node name="Wall4" type="StaticBody2D" parent="SecondRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondRoom/Walls/Wall4"]
position = Vector2(1124, 535)
shape = SubResource("RectangleShape2D_lvtmh")

[node name="NumberForBox2" type="Sprite2D" parent="SecondRoom"]
position = Vector2(169.5, 182)
scale = Vector2(0.107422, 0.109375)
texture = ExtResource("7_0yprl")

[node name="ButtonOpenBox" type="LinkButton" parent="SecondRoom"]
offset_left = 472.0
offset_top = 405.0
offset_right = 562.0
offset_bottom = 471.0

[node name="OpenBox" type="Control" parent="SecondRoom"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BatterySprite" type="Area2D" parent="SecondRoom"]
script = ExtResource("11_jsoai")

[node name="Sprite2D" type="Sprite2D" parent="SecondRoom/BatterySprite"]
position = Vector2(261, 506)
rotation = 1.01578
texture = ExtResource("12_bisgb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondRoom/BatterySprite"]
position = Vector2(261, 506)
rotation = -0.760964
shape = SubResource("RectangleShape2D_y5ctq")

[node name="screwdriverSprite" type="Area2D" parent="SecondRoom"]
script = ExtResource("13_y5ctq")

[node name="Sprite2D" type="Sprite2D" parent="SecondRoom/screwdriverSprite"]
position = Vector2(698, 176)
rotation = 0.760964
texture = ExtResource("14_w7ht3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondRoom/screwdriverSprite"]
position = Vector2(701, 174)
shape = SubResource("RectangleShape2D_8ktx7")

[node name="ThirdRoom" type="Node2D" parent="."]
visible = false
script = ExtResource("6_2vekm")

[node name="ThirdBackground" type="Sprite2D" parent="ThirdRoom"]
position = Vector2(632, 324)
texture = ExtResource("6_gwjdr")

[node name="LeftArrow" type="Button" parent="ThirdRoom"]
offset_left = 16.0
offset_top = 336.0
offset_right = 64.0
offset_bottom = 384.0
icon = ExtResource("3_2vekm")

[node name="RightArrow" type="Button" parent="ThirdRoom"]
offset_left = 1216.0
offset_top = 336.0
offset_right = 1264.0
offset_bottom = 384.0
icon = ExtResource("4_yx171")

[node name="Walls" type="Node2D" parent="ThirdRoom"]

[node name="Wall1" type="StaticBody2D" parent="ThirdRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdRoom/Walls/Wall1"]
position = Vector2(639.5, 320.5)
shape = SubResource("RectangleShape2D_yyih5")

[node name="Wall2" type="StaticBody2D" parent="ThirdRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdRoom/Walls/Wall2"]
position = Vector2(185, 509.5)
shape = SubResource("RectangleShape2D_qjyg3")

[node name="Wall3" type="StaticBody2D" parent="ThirdRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdRoom/Walls/Wall3"]
position = Vector2(1022, 480)
shape = SubResource("RectangleShape2D_qjyg3")

[node name="Wall4" type="StaticBody2D" parent="ThirdRoom/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdRoom/Walls/Wall4"]
position = Vector2(627, 232)
shape = SubResource("RectangleShape2D_elkpi")

[node name="PuzzleBoardLink" type="LinkButton" parent="ThirdRoom"]
offset_left = 88.0
offset_top = 135.0
offset_right = 159.0
offset_bottom = 431.0

[node name="PuzzleBoard" parent="ThirdRoom" instance=ExtResource("8_yx171")]
visible = false

[node name="GreenScreen1" type="ColorRect" parent="ThirdRoom"]
visible = false
offset_left = 82.0
offset_top = 149.0
offset_right = 161.0
offset_bottom = 224.0
rotation = 0.13439
color = Color(0, 0.337255, 0, 0.435294)

[node name="NumberForBox3" type="Sprite2D" parent="ThirdRoom"]
position = Vector2(300, 363)
scale = Vector2(0.199219, 0.230469)
texture = ExtResource("11_wuoie")

[node name="FourthRoom" type="Node2D" parent="."]
script = ExtResource("9_yhmtn")

[node name="FourthBackground" type="Sprite2D" parent="FourthRoom"]
position = Vector2(629, 323)
texture = ExtResource("7_lvtmh")

[node name="LeftArrow" type="Button" parent="FourthRoom"]
offset_left = 16.0
offset_top = 336.0
offset_right = 64.0
offset_bottom = 384.0
icon = ExtResource("3_2vekm")

[node name="RightArrow" type="Button" parent="FourthRoom"]
visible = false
offset_left = 1216.0
offset_top = 336.0
offset_right = 1264.0
offset_bottom = 384.0
icon = ExtResource("4_yx171")

[node name="Walls" type="Node2D" parent="FourthRoom"]
visible = false
position = Vector2(-5, 1)

[node name="Wall1" type="StaticBody2D" parent="FourthRoom/Walls"]
position = Vector2(-81, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FourthRoom/Walls/Wall1"]
position = Vector2(385, 453)
shape = SubResource("RectangleShape2D_0yprl")

[node name="Wall2" type="StaticBody2D" parent="FourthRoom/Walls"]
position = Vector2(-80, 141)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FourthRoom/Walls/Wall2"]
position = Vector2(713, 88.75)
shape = SubResource("RectangleShape2D_wuoie")

[node name="LinkMainScreen" type="LinkButton" parent="FourthRoom"]
visible = false
offset_left = 384.0
offset_top = 177.0
offset_right = 867.0
offset_bottom = 336.0

[node name="MainMessage" type="Control" parent="FourthRoom"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("11_lvtmh")

[node name="TextStart" type="RichTextLabel" parent="FourthRoom/MainMessage"]
z_index = 2
custom_minimum_size = Vector2(-0.1, 0)
layout_mode = 0
offset_left = 409.0
offset_top = 166.0
offset_right = 893.0
offset_bottom = 454.0
theme_override_colors/table_border = Color(1, 1, 1, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_gwjdr")
theme_override_fonts/mono_font = ExtResource("11_gwjdr")
theme_override_fonts/italics_font = ExtResource("11_gwjdr")
theme_override_fonts/bold_italics_font = ExtResource("11_gwjdr")
theme_override_fonts/bold_font = ExtResource("11_gwjdr")
theme_override_font_sizes/bold_italics_font_size = 6
theme_override_font_sizes/italics_font_size = 6
theme_override_font_sizes/mono_font_size = 6
theme_override_font_sizes/normal_font_size = 20
text = "Произошла авария! Космический корабль попал в аномальную зону и вышел из строя. Вся твоя команда осталась запертой в блоке, где вот-вот закончится кислород. Тебе необходимо перезапустить ядро, включить питание корабля, разблокировать дверь, тем самым выпустив команду, и вылететь из проблемной зоны. Исследуй 4 комнаты и решай головоломки, каждая из которых будет приближать тебя к выполнению миссии. Действуй быстро — времени мало!"

[node name="MainScreen" type="TextureRect" parent="FourthRoom/MainMessage"]
layout_mode = 0
offset_left = -147.0
offset_top = -145.0
offset_right = 1458.0
offset_bottom = 832.0
texture = ExtResource("10_yx171")

[node name="ButtonExit" type="Button" parent="FourthRoom/MainMessage"]
layout_mode = 0
offset_left = 13.0
offset_top = 298.0
offset_right = 61.0
offset_bottom = 346.0
icon = ExtResource("3_2vekm")

[node name="NumberForBox4" type="Sprite2D" parent="FourthRoom"]
visible = false
position = Vector2(87, 426)
scale = Vector2(0.0957031, 0.0976563)
texture = ExtResource("17_bvhbk")

[node name="LinkRobotMessage" type="LinkButton" parent="FourthRoom"]
offset_left = 265.0
offset_top = 396.0
offset_right = 347.0
offset_bottom = 520.0

[node name="RobotMessage" type="Control" parent="FourthRoom"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("19_cpsxm")

[node name="RobotText" type="RichTextLabel" parent="FourthRoom/RobotMessage"]
layout_mode = 0
offset_left = 380.0
offset_top = 301.0
offset_right = 909.0
offset_bottom = 368.0
text = "Привет! Я твой робот-ассистент и я готов помочь тебе с выполнением твоей миссии! Какая проблема у тебя возникла?"
horizontal_alignment = 1

[node name="RobotScreen" type="TextureRect" parent="FourthRoom/RobotMessage"]
show_behind_parent = true
layout_mode = 0
offset_left = -9.0
offset_top = -41.0
offset_right = 1273.0
offset_bottom = 680.0
texture = ExtResource("20_hmewc")
expand_mode = 1

[node name="ButtonExit" type="Button" parent="FourthRoom/RobotMessage"]
layout_mode = 0
offset_left = 2.0
offset_top = 288.0
offset_right = 50.0
offset_bottom = 336.0
icon = ExtResource("3_2vekm")

[node name="PaintBrushScript" type="Area2D" parent="FourthRoom"]
script = ExtResource("27_8ktx7")

[node name="Sprite2D" type="Sprite2D" parent="FourthRoom/PaintBrushScript"]
position = Vector2(369, 489)
texture = ExtResource("28_hwsgv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FourthRoom/PaintBrushScript"]
position = Vector2(365.428, 489.422)
rotation = -0.6353
shape = SubResource("RectangleShape2D_gebyw")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="InventoryRoot" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 14.0
offset_top = 5.0
offset_right = 1294.0
offset_bottom = 126.0

<<<<<<< HEAD
[node name="InventoryBackground" type="TextureRect" parent="UILayer/InventoryRoot"]
material = SubResource("CanvasItemMaterial_d21ai")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("21_hmewc")

[node name="Slots" type="Control" parent="UILayer/InventoryRoot"]
custom_minimum_size = Vector2(60, 60)
anchors_preset = 0
offset_left = 160.0
offset_top = -61.0
offset_right = 244.0
offset_bottom = -1.0
=======
[node name="Slots" type="HBoxContainer" parent="UILayer/InventoryRoot"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
>>>>>>> 0563eea9be836d9b5a105c85775b4527a6e4c9d9

[node name="Slot1" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
z_index = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 189.0
offset_top = 79.0
offset_right = 249.0
offset_bottom = 139.0

[node name="Slot2" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
layout_mode = 2
offset_left = 280.0
offset_top = 75.0
offset_right = 335.0
offset_bottom = 135.0

[node name="Slot3" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
layout_mode = 2
offset_left = 368.0
offset_top = 79.0
offset_right = 425.0
offset_bottom = 139.0

[node name="Slot4" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
layout_mode = 2
offset_left = 453.0
offset_top = 78.0
offset_right = 511.0
offset_bottom = 138.0

[node name="Slot5" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
layout_mode = 2
offset_left = 543.0
offset_top = 81.0
offset_right = 598.0
offset_bottom = 144.0

[node name="Slot6" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
layout_mode = 2
offset_left = 633.0
offset_top = 81.0
offset_right = 688.0
offset_bottom = 141.0

[node name="Slot7" type="TextureButton" parent="UILayer/InventoryRoot/Slots"]
layout_mode = 2
offset_left = 718.0
offset_top = 80.0
offset_right = 772.0
offset_bottom = 140.0

[node name="InventoryBackground" type="TextureRect" parent="UILayer/InventoryRoot"]
layout_mode = 0
offset_left = 348.0
offset_top = 10.0
offset_right = 897.0
offset_bottom = 122.0
texture = ExtResource("21_hmewc")
expand_mode = 1

[connection signal="pressed" from="FirstRoom/LeftArrow" to="." method="_on_first_room_left_arrow_pressed"]
[connection signal="pressed" from="FirstRoom/RightArrow" to="." method="_on_first_room_right_arrow_pressed"]
[connection signal="input_event" from="FirstRoom/KeySprite" to="FirstRoom/KeySprite" method="_on_input_event"]
[connection signal="pressed" from="SecondRoom/LeftArrow" to="." method="_on_second_room_left_arrow_pressed"]
[connection signal="pressed" from="SecondRoom/RightArrow" to="." method="_on_second_room_right_arrow_pressed"]
[connection signal="pressed" from="SecondRoom/ButtonOpenBox" to="SecondRoom" method="_on_ChestButton_pressed"]
<<<<<<< HEAD
[connection signal="input_event" from="SecondRoom/BatterySprite" to="SecondRoom/BatterySprite" method="_on_input_event"]
[connection signal="input_event" from="SecondRoom/screwdriverSprite" to="SecondRoom/screwdriverSprite" method="_on_input_event"]
=======
[connection signal="pressed" from="SecondRoom/ButtonOpenBox" to="SecondRoom" method="_on_ButtonOpenBox_pressed"]
>>>>>>> 0563eea9be836d9b5a105c85775b4527a6e4c9d9
[connection signal="pressed" from="ThirdRoom/LeftArrow" to="." method="_on_third_room_left_arrow_pressed"]
[connection signal="pressed" from="ThirdRoom/RightArrow" to="." method="_on_third_room_right_arrow_pressed"]
[connection signal="pressed" from="ThirdRoom/PuzzleBoardLink" to="ThirdRoom" method="_on_link_pressed"]
[connection signal="pressed" from="FourthRoom/LeftArrow" to="." method="_on_fourth_room_left_arrow_pressed"]
[connection signal="pressed" from="FourthRoom/RightArrow" to="." method="_on_fourth_room_right_arrow_pressed"]
[connection signal="pressed" from="FourthRoom/LinkMainScreen" to="FourthRoom" method="_on_LinkMainScreen_pressed"]
[connection signal="pressed" from="FourthRoom/MainMessage/ButtonExit" to="FourthRoom" method="hide_message_screen"]
[connection signal="pressed" from="FourthRoom/LinkRobotMessage" to="FourthRoom" method="_on_LinkRobotMessage_pressed"]
[connection signal="pressed" from="FourthRoom/RobotMessage/ButtonExit" to="FourthRoom" method="hide_robot_message_screen"]
[connection signal="input_event" from="FourthRoom/PaintBrushScript" to="FourthRoom/PaintBrushScript" method="_on_input_event"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot4" to="." method="_on_slot_4_pressed"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot5" to="." method="_on_slot_5_pressed"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot6" to="." method="_on_slot_6_pressed"]
[connection signal="pressed" from="UILayer/InventoryRoot/Slots/Slot7" to="." method="_on_slot_7_pressed"]
